<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab 6</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">send</string>
    <string name="title">Here are my widgets: </string>
    <string name="checkbox">Check this out!</string>
    <string name="swch">Switch on / off</string>
    <string name="des">Canadian flag</string>
    <string name="text">Type in your answer here</string>

    //********************Lab 3***************************//

    <string name="email">Enter you email address:</string>
    <string name="mess">Type email here</string>
    <string name="pass">Type your password:</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="hname">Enter your name</string>
    <string name="yemail">Your email:</string>
    <string name="eemail">Enter your email</string>
    <string name="pic">your picture:</string>
    <string name="click">Click the button above to take a picture</string>

    //********************Lab 4***************************//

    <string name="chat">Go to chat</string>
    <string name="Type">Type here</string>
    <string name="br">Receive</string>
    <string name="log">send</string>

    //********************Lab 6***************************//

    <string name="toolbut">Go to Toolbar Page</string>
    <string name="turtle">turtle</string>
    <string name="alien">alien</string>
    <string name="overflow">Click</string>
    <string name="comet">comet</string>
    <string name="message">Type your new message?</string>
    <string name="type">Type Here</string>

</resources>
