<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:title="@string/turtle"
        android:icon="@drawable/ninja_turtle"
        app:showAsAction="always"
        android:orderInCategory="250"

        />

    <item
        android:id="@+id/item2"
        android:title="@string/alien"
        android:icon="@drawable/alien"
        app:showAsAction="always"
        android:orderInCategory="500"

        />

    <item
        android:id="@+id/item3"
        android:title="@string/comet"
        android:icon="@drawable/comet"
        android:orderInCategory="1000"
        app:showAsAction="always"

        />


    <item
        android:id="@+id/over"
        android:title="@string/overflow"
        android:orderInCategory="1200"
        app:showAsAction="never"

        />

</menu>