<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="4"
    android:layout_column="2"
    android:layout_weight="1"
    android:gravity="fill"
    android:layout_columnSpan="2">


    <GridLayout
        android:layout_row="0"
        android:layout_column="0">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/title"
           android:layout_row="0"
           android:layout_column="0"
           android:textAlignment="viewStart"
           android:textSize="30sp"/>

    </GridLayout>

    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        >

        <Button

            android:layout_width="205dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/ButtonText"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:contentDescription="@string/des"
           android:src="@drawable/flag"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="0"

            android:text="@string/checkbox"/>

        <Switch
            android:layout_width="182dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/swch"
            android:textAlignment="textStart"/>

    </GridLayout>


    <GridLayout
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="match_parent"
        >

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o"/>
    </GridLayout>



</GridLayout>

