<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sndoid="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="fill">


    <TextView
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/email"
        android:textSize="20dp"
        />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/mess"
            android:textSize="20dp"
           android:inputType="textEmailAddress"
            />


        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/pass"
            android:textSize="20dp"
            />


        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:textSize="20dp"
            android:inputType="textPassword"

            />

        <Button
            android:id="@+id/butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText"
            android:textSize="20dp"
            />

</LinearLayout>